compiler/tests/pass/project_cli/src/main.afns
package test;

extern "C" fn puts(s: cstr) -> i32;

fn main() -> i32 {
    puts("project");
    return 0;
}
