compiler/tests/fail/dup_struct_field/main.afns
package dupfield;

struct Point {
    x: i32;
    y: i32;
    x: i32;
}

fn main() -> i32 { return 0; }
